--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <ul>
         <li><a href="/WebAudioAPISpecTranslation/index.html">W3C Web Audio API Specification Korean translation</a> (currently on work: 2021. 11. 18 ~ )</li>
         <li><a href="/AudioWorkletPractice/index.html">AudioWorklet practice</a></li>
+        <li><a href="/AboutComplement/index.html">보수(補數)에 대해서 / About complement</a></li>
       </ul>
     </main>
   </body>
