--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
     </header>
     <hr>
     <main>
-      <ul>
-        <li><a href="/WebAudioAPISpecTranslation/index.html">W3C Web Audio API Specification Korean translation</a> (currently on work: 2021. 11. 18 ~ )</li>
-        <li><a href="/AudioWorkletPractice/index.html">AudioWorklet practice</a></li>
-        <li><a href="/AboutComplement/index.html">보수(補數)에 대해서 / About complement</a></li>
-      </ul>
+      <section>
+        <h1>Related to programming</h1>
+        <ul>
+          <li><a href="/WebAudioAPISpecTranslation/index.html">W3C Web Audio API Specification Korean translation</a> (currently on work: 2021. 11. 18 ~ )</li>
+          <li><a href="/AudioWorkletPractice/index.html">AudioWorklet practice</a></li>
+          <li><a href="/AboutComplement/index.html">보수(補數)에 대해서 / About complement</a></li>
+        </ul>
+      </section>
+      <br>
+      <section>
+        <h1>etc</h1>
+        <ul>
+          <li><a href="/GaugeUnitTheory/index.html">게이지 유닛 이론(Gauge Unit Theory)</a></li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
