--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1950,6 +1950,10 @@ interface StereoPannerNode : AudioNode {
 };
         </pre>
         <br>
+        <h2>1.31. WaveShaperNode 인터페이스</h2>
+        <p>WaveShaperNode는 비선형 왜곡 효과를 구현하는 AudioNode 프로세서입니다.</p>
+        <p>비선형 waveshaping 왜곡은 미묘한 비선형 warming 혹은 더욱 분명한 왜곡 효과 둘 다에 보통 사용됩니다. 임의 비선형 shaping curve는 명시될 수 있습니다.</p>
+        <br>
       </div>
     </main>
   </body>
