--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1973,6 +1973,16 @@ interface AudioWorklet : Worklet {
         <p>AudioWorklet의 worklet 목적지 유형은 "audioworklet" 입니다.</p>
         <p>스크립트를 addModule(moduleUrl) 메서드를 통해 스크립트를 import하는 것은 AudioWorkletGlobalScope 하에서 AudioWorkletProcessor의 클래스 정의를 등록합니다. imported된 클래스 생성자와 이 생성자로부터 실제 생성된 인스턴스에 대한 두 개의 내부 저장 영역이 있습니다.</p>
         <br>
+        <h1>2. 프로세싱 모델</h1>
+        <h2>2.1. 배경</h2>
+        <p><i>이 섹션은 비규범적입니다.</i></p>
+        <p>낮은 레이턴시를 요구하는 실시간 오디오 시스템은 종종 콜백 함수를 사용하여 구현되는데, 여기서 운영 체제는 많은 오디오가 방해받지 않은 채로 재생되기 위해 계산되어야만 할 때 프로그램을 콜백합니다. 그런 콜백은 이상적으로 높은 우선도의 스레드에서 호출됩니다 (종종 시스템의 가장 높은 우선도). 이는 오직 오디오만을 다루는 프로그램은 코드를 이 콜백으로부터 실행해야 함을 의미합니다. 스레드 경계선은 가로지르거나 렌더링 스레드와 콜백 사이에 얼마간의 버퍼링을 추가하는 것은 자연히 레이턴시를 추가할 것이거나 시스템을 글리치에 덜 탄력성 있게 만들 것입니다.</p>
+        <p>이러한 이유에서, Web Platform에서의 전통적인 비동기 작업 실행법인 이벤트 루프는 여기서는 작동하지 않습니다. 왜냐하면 이 스레드는 계속해서 실행 중이지 않기 때문입니다. 또한, 많은 불필요하고 잠재적으로 가로막는(blocking) 작업이 전통적인 수행 컨텍스트 (Windows 그리고 Workers)로부터 가능한데, 이는 수용할 만한 퍼포먼스 수준에 도달하기에 바람직한 것이 아닙니다.</p>
+        <p>추가적으로, Worker 모델은 스크립트 실행 컨텍스트에 필수적인 작업용 스레드를 생성하는 것을 만드는 반면, 모든 AudioNode는 보통 같은 실행 컨텍스트를 공유합니다.</p>
+        <div class="note">
+          <p>알림: 이 섹션은 end result가 어떻게 보여야 하는지를 명시하지, 어떻게 이것이 구현되어야 하는지를 명시하는 것이 아닙니다. 특히, 메시지 큐를 사용하는 대신, 구현자는 메모리 연산이 reordered되지 않는 이상 스레드 간에서 공유되는 메모리를 사용할 수 있습니다.</p>
+        </div>
+        <br>
       </div>
     </main>
   </body>
