--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1983,6 +1983,27 @@ interface AudioWorklet : Worklet {
           <p>알림: 이 섹션은 end result가 어떻게 보여야 하는지를 명시하지, 어떻게 이것이 구현되어야 하는지를 명시하는 것이 아닙니다. 특히, 메시지 큐를 사용하는 대신, 구현자는 메모리 연산이 reordered되지 않는 이상 스레드 간에서 공유되는 메모리를 사용할 수 있습니다.</p>
         </div>
         <br>
+        <h2>2.2. 컨트롤 스레드와 렌더링 스레드</h2>
+        <p>Web Audio API는 반드시 컨트롤 스레드와 렌더링 스레드를 사용하여 구현되어야만 합니다.</p>
+        <p><strong>컨트롤 스레드</strong>란 AudioContext가 인스턴스화되고, author가 오디오 그래프를 조작하는 스레드입니다. 즉, BaseAudioContext에서의 작동이 호출되는 곳입니다. <strong>렌더링 스레드</strong>란 실제 오디오 출력이 컨트롤 스레드로부터의 호출에 응답하여 계산되는 스레드입니다. 만약 AudioContext에 대한 오디오 계산이면 이것은 실시간, 콜백 기반의 오디오 스레드일수도 있고, 만약 OfflineAudioContext에 대한 오디오 계산이면 일반 스레드입니다.</p>
+        <p>컨트롤 스레드는 [HTML] 에서 기술되었듯이 전통적인 이벤트 루프를 사용합니다.</p>
+        <p>렌더링 스레드는 전문화된 렌더링 루프를 사용하는데, 이는 2.4. 오디오 그래프 렌더링하기 섹션에서 기술됩니다.</p>
+        <p>컨트롤 스레드로부터 렌더링 스레드로의 소통은 컨트롤 메시지 전달을 사용하여 이루어집니다. 다른 방향으로의 소통은 일반 이벤트 루프 태스크를 사용하여 이루어집니다.</p>
+        <p>각 AudioContext는 컨트롤 메시지의 리스트인 하나의 <strong>컨트롤 메시지 큐</strong>를 가지고 있습니다. <strong>컨트롤 메시지</strong>는 렌더링 스레드에서 실행되는 동작입니다.</p>
+        <p><strong>컨트롤 메시지를 queuing한다는 것</strong>은 BaseAudioContext의 컨트롤 메시지 큐의 끝에 메시지를 추가한다는 것을 의미합니다.</p>
+        <div class="note">
+          <p>알림: 예를 들어, AudioBufferSourceNode에서 성공적으로 start()를 호출하는 것은 연관된 BaseAudioContext의 컨트롤 메시지 큐에 컨트롤 메시지를 추가합니다.</p>
+        </div>
+        <br>
+        <p>컨트롤 메시지 큐의 컨트롤 메시지는 삽입 시간에 의해 정렬됩니다. <strong>가장 오래된 메시지</strong>는 따라서 컨트롤 메시지의 큐의 맨 앞에 있는 메시지입니다.</p>
+        <p><strong>컨트롤 메시지 큐 Qa를 또 다른 컨트롤 메시지 큐 Qb와 swapping한다는 것</strong>은 다음의 단계를 실행한다는 것을 의미합니다:</p>
+        <ol>
+          <li>Qc를 새롭고 빈 컨트롤 메시지 큐라고 하자.</li>
+          <li>모든 컨트롤 메시지 Qa를 Qc로 옮긴다.</li>
+          <li>모든 컨트롤 메시지 Qb를 Qa로 옮긴다.</li>
+          <li>모든 컨트롤 메시지 Qc를 Qb로 옮긴다.</li>
+        </ol>
+        <br>
       </div>
     </main>
   </body>
