--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2004,6 +2004,12 @@ interface AudioWorklet : Worklet {
           <li>모든 컨트롤 메시지 Qc를 Qb로 옮긴다.</li>
         </ol>
         <br>
+        <h2>2.3. 비동기적 작동</h2>
+        <p>AudioNode에서 메서드를 호출하는 것은 효과적으로 비동기적이며, 반드시 두 과정을 거쳐 이루어져야 합니다. 그것은 동기적인 부분과 비동기적인 부분입니다. 각 메서드에 대해, 실행의 몇 부분은 컨트롤 스레드에서 발생하고 (예를 들어, 유효하지 않는 매개변수의 경우 예외를 던진다든지), 몇 부분은 렌더링 스레드에서 발생합니다 (예를 들자면, AudioParam의 값을 변경하는 것).</p>
+        <p>AudioNode와 BaseAudioContext의 각 동작의 설명에서, 동기적 부분은 ⌛로 마킹되어 있습니다. 모든 다른 동작은 병렬적으로 수행되는데, 이는 [HTML]에 기술되어 있습니다.</p>
+        <p>동기적 부분은 컨트롤 스레드에서 수행되고, 즉시 발생합니다. 만약 이것이 실패하면, 메서드 수행은 중단되고, 아마 예외를 발생시킬 것입니다. 만약 이것이 성공하면, 렌더링 스레드에서 실행될 작동을 부호화하는 컨트롤 메시지가 이 렌더링 스레드의 컨트롤 메시지 큐에 enque될 것입니다.</p>
+        <p>다른 이벤트들과 관련된 동기적 그리고 비동기적 부분 순서는 반드시 같아야만 합니다. 각각 동기적이고 비동기적인 섹션 A<sub>Sync</sub>와 A<sub>Async</sub> 그리고 B<sub>Sync</sub>와 B<sub>Async</sub>인 두 작동 A와 B가 주어졌을 때, 만약 A가 B보다 먼저 발생한다면, A<sub>Sync</sub>는 B<sub>Sync</sub>보다 먼저 발생하고, A<sub>Async</sub>가 B<sub>Async</sub>보다 먼저 발생합니다. 다른 말로 하자면, 동기적이고 비동기적인 부분은 reorder될 수 없습니다.</p>
+        <br>
       </div>
     </main>
   </body>
