--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2010,6 +2010,29 @@ interface AudioWorklet : Worklet {
         <p>동기적 부분은 컨트롤 스레드에서 수행되고, 즉시 발생합니다. 만약 이것이 실패하면, 메서드 수행은 중단되고, 아마 예외를 발생시킬 것입니다. 만약 이것이 성공하면, 렌더링 스레드에서 실행될 작동을 부호화하는 컨트롤 메시지가 이 렌더링 스레드의 컨트롤 메시지 큐에 enque될 것입니다.</p>
         <p>다른 이벤트들과 관련된 동기적 그리고 비동기적 부분 순서는 반드시 같아야만 합니다. 각각 동기적이고 비동기적인 섹션 A<sub>Sync</sub>와 A<sub>Async</sub> 그리고 B<sub>Sync</sub>와 B<sub>Async</sub>인 두 작동 A와 B가 주어졌을 때, 만약 A가 B보다 먼저 발생한다면, A<sub>Sync</sub>는 B<sub>Sync</sub>보다 먼저 발생하고, A<sub>Async</sub>가 B<sub>Async</sub>보다 먼저 발생합니다. 다른 말로 하자면, 동기적이고 비동기적인 부분은 reorder될 수 없습니다.</p>
         <br>
+        <h2>2.4. 오디오 그래프 렌더링하기</h2>
+        <p>오디오 그래프를 렌더링한다는 것은 128 샘플 프레임의 블럭 내에서 이루어집니다. 128 샘플 프레임의 블럭은 <strong>렌더 퀀텀</strong>(render quantum)이라고 불리며, <strong>렌더 퀀텀 크기</strong>(~ size) 는 128입니다.</p>
+        <p>주어진 스레드에서 <strong>atomically</strong>하게 발생하는 작동은 다른 atomic한 작동이 또 다른 스레드에서 작동하고 있지 않을때에만 오직 수행 가능합니다.</p>
+        <p>BaseAudioContext에서 오디오 블럭을 렌더링하는 알고리즘 G 그리고 컨트롤 메시지 큐 Q는 다수의 단계로 구성되며 추가적인 디테일은 그래프 렌더링의 알고리즘에서 설명됩니다.</p>
+        <div class="note">
+          <p>실제로는, AudioContext 렌더링 스레드는 종종 시스템 수준의 오디오 콜백을 run off하는데, 이는 등시적인(isochronous) 방식으로 수행됩니다.</p>
+          <p>OfflineAudioContext는 시스템 수준의 오디오 콜백을 가질 것이 요구되지 않으나, 이전 콜백이 종료되자마자 발생하는 콜백과 함께 이것이 그러한 콜백을 가지고 있는 것 처럼 행동합니다.</p>
+        </div>
+        <br>
+        <p>오디오 콜백은 또한 컨트롤 메시지 큐에서 태스크로서 queue됩니다. UA는 반드시 다음의 알고리즘을 수행하여 렌더 퀀텀들을 처리해 요구된 버퍼 사이즈를 채움으로써 그러한 태스크를 이행해야만 합니다. 컨트롤 메시지 큐와 함게, 각 AudioContext는 일반적인 태스크 큐를 가지고 있으며, 컨트롤 스레드로부터 렌더링 스레드에 post된 태스크들에 대해 이것의 <strong>연관된 태스크 큐</strong>를 호출합니다. 추가적인 마이크로 태스크 체크 포인트는 렌더 퀀텀을 처리한 후에 수행되어 AudioWorkletProcessor의 process 메서드의 실행 중에 queue되었을 지도 모르는 어떠한 마이크로태스크들을 실행합니다.</p>
+        <p>AudioWorkletNode로부터 post된 모든 태스크들은 이것의 연관된 BaseAudioContext의 연관된 태스크 큐에 post됩니다.</p>
+        <p>다음의 과정은 렌더링 루프가 시작되기 전에 반드시 한 번 수행되어야만 합니다.</p>
+        <p>과정은 추후에 번역</p>
+        <p>AudioNode를 <strong>mute</strong>한다는 것은 이것의 출력이 반드시 이 오디오 블럭의 렌더링에 대해 무음을 출력해야만 한다는 것을 의미합니다.</p>
+        <p><strong>AudioNode로부터 읽는 것에 대해 버퍼를 사용 가능하게 만든다는 것</strong>은 이 AudioNode에 연결된 다른 AudioNode들이 이것으로부터 안전하게 읽을 수 있는 상태에 이것을 놓는다는 것을 의미합니다.</p>
+        <div class="note">
+          <p>참고: 예를 들어, 구현은 새로운 버퍼를 할당하거나, 더욱 정교한 메커니즘을 가지는 것을 선택할 수 있습니다. 그 메커니즘이란 지금은 사용되지 않는 존재하는 버퍼를 재사용하는 것입니다.</p>
+        </div>
+        <br>
+        <p><strong>AudioNode의 입력을 record한다는 것</strong>은 이 AudioNode의 입력 데이터를 미래의 사용을 위해 복사한다는 것을 의미합니다.</p>
+        <p><strong>오디오 블럭을 계산한다는 것</strong>은 이 AudioNode에 대해 알고리즘을 실행하여 128 샘플 프레임을 생성하는 것을 의미합니다.</p>
+        <p><strong>입력 버퍼를 처리한다는 것</strong>은 AudioNode에 대해 알고리즘을 실행하는 것을 의미하는데, 입력 버퍼와 이 AudioNode의 AudioParam(들)의 값(들)을 이 알고리즘에 대한 입력으로서 사용합니다.</p>
+        <br>
       </div>
     </main>
   </body>
