--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2041,7 +2041,18 @@ interface AudioWorklet : Worklet {
           <li>AudioContext 또는 OfflineAudioContext를 close()하기 위한 컨트롤 메시지를 queue시킵니다.</li>
         </ul>
         <br>
+        <h1>3. 동적 생명 주기</h1>
+        <h2>3.1. 배경</h2>
+        <div class="note">
+          <p>알림: AudioContext와 AudioNode 생명 주기 특성에 대한 규범적인 설명은 AudioContext 생명주기와 AudioNode 생명주기에서 설명되고 있습니다.</p>
+        </div>
+        <br>
+        <p><i>이 섹션은 비규범적입니다.</i></p>
+        <p>정적 라우팅 설정의 생성을 허용함에 추가적으로, 제한된 생명 주기를 가지는 동적으로 할당된 소리에 사용자 정의 효과 라우팅을 적용하는 것 또한 가능합니다. 이 논의의 목적을 위해, 이 짧게 사는 소리를 "노트" (note) 라고 부릅시다. 많은 오디오 어플리케이션들은 노트의 개념을 포함하며, 그 예로는 드럼 머신, 시퀸서, 게임 플레이에 따라 발동되는 많은 한 번의 (one-shot) 소리를 가진 3D 게임을 들 수 있습니다.</p>
+        <p>전통적인 소프트웨어 신디사이저에서는, 노트는 동적으로 할당되고 사용 가능한 자원의 풀(pool)에서 해제되었습니다. 노트는 MIDI note-on 메시지가 받아졌을 때 할당됩니다. 노트가 샘플 데이터의 끝에 도달했거나 (만약 반복되지 않는다면), 엔벨로프의 서스테인 단계에 도달했는데 서스테인이 0이거나, 혹은 엔벨로프의 릴리즈 단계로 가게 하는 MIDI note-off 메시지에 기인해 노트가 재생을 마쳤을 때 해제됩니다. MIDI note-off 경우에서, 노트는 바로 해제되지 않고, 오직 릴리즈 엔벨로프 단계가 마쳤을 때에만 해제됩니다. 어떠한 주어진 시간에서라도, 다수의 재생되는 노트가 있을 수 있으나 노트의 집합은 계속 바뀝니다. 왜냐하면 새로운 노트들이 라우팅 그래프에 추가되고, 오래된 것들은 해제되기 때문입니다.</p>
+        <p>오디오 시스템은 자동적으로 개개의 "노트" 이벤트에 대한 라우팅 그래프의 부분을 해체(tear down)하는 것을 다룹니다. "노트" 는 AudioBufferSourceNode에 의해 표현되는데, 이는 직접적으로 다른 프로세싱 노드에 연결될 수 있습니다. 노트가 재생을 마쳤을 때, 컨텍스트는 자동적으로 이 AudioBufferSourceNode에 대한 참조를 해제하는데, 이는 차례로 이것이 연결된 모든 노드들에 대한 참조를 해제합니다. 노드들은 자동적으로 그래프에서 연결 해제되고 더 이상 참조를 가지고 있지 않을 때 삭제될 것입니다. 동적인 소리들 사이에서 공유되고 오래 사는 그래프 상의 노드들은 명시적으로 관리될 수 있습니다. 비록 이것이 복잡하게 들리긴 하지만, 추가적인 요구되는 처리 없이 이 모든 것은 자동적으로 발생합니다.</p>
       </div>
+      <br>
     </main>
   </body>
 </html>
