--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2098,6 +2098,8 @@ function playSound() {
         <p><i>이 섹션은 규범적입니다.</i></p>
         <p>AudioNode 입력은 자신에게 연결된 모든 입력들로부터 채널들을 결합하는 믹싱 규칙을 가지고 있습니다. 단순한 예제로, 만약 입력이 모노 출력과 스테레오 출력으로부터 연결되어 있다면 보통 모노 입력이 스테레오로 업믹스되고 스테레오 연결로 합쳐질 것입니다. 하지만, 물론, 모든 입력에 대해 모든 AudioNode에 정확한 믹싱 규칙을 정의하는 것은 중요합니다. 모든 입력에 대한 기본 믹싱 규칙은 선택되어 있어 일들은 "그냥 작동" 합니다. 세부 사항에 대해 너무 걱정할 필요 없이 말이죠. 특히 모노와 스테레오 스트림의 아주 일반적인 경우에서 말입니다. 물론, 특히 멀티 채널처럼, 규칙은 고급의 사용 경우에 대해 변경될 수 있습니다.</p>
         <br>
+        <p>몇가지 용어를 정의하자면, 업믹싱이란 더 적은 채널의 수를 가진 스트림을 취하고 그것을 더 큰 수의 채널을 가진 스트림으로 변환하는 과정을 의미합니다. 다운믹싱이란 더 큰 채널의 수를 가진 스트림을 취하고 그것을 더 적은 수의 채널을 가진 스트림으로 변환하는 과정을 의미합니다.</p>
+        <br>
       </div>
     </main>
   </body>
