--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2112,6 +2112,10 @@ function playSound() {
           </li>
         </ol>
         <br>
+        <h2>4.1. 스피커 채널 레이아웃</h2>
+        <p>channelInterpretation이 "speakers" 라면, 특정한 채널 레이아웃에 대해 업믹싱과 다운믹싱이 정의됩니다.</p>
+        <p>모노 (1채널), 스테레오 (2채널), 쿼드 (4채널), 5.1 (6채널) 이 반드시 지원되어야만 합니다. 다른 채널 레이아웃은 이 명세의 미래 버전에서 지원될 수도 있습니다.</p>
+        <br>
       </div>
     </main>
   </body>
