--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <ul>
           <li><a href="/WebAudioAPISpecTranslation/index.html">W3C Web Audio API Specification Korean translation</a> (currently on work: 2021. 11. 18 ~ )</li>
           <li><a href="/AudioWorkletPractice/index.html">AudioWorklet practice</a></li>
-          <li><a href="/AboutComplement/index.html">보수(補數)에 대해서 / About complement</a></li>
+          <li><a href="/AboutComplement/index.html">보수(補數)에 대해서 (About complement)</a></li>
+          <li><a href="/FourierSeriesExploration/opening/opening-ko.html">푸리에 급수 탐구</a> / <a href="">Fourier series exploration</a></li>
         </ul>
       </section>
       <br>
