--- a/FourierSeriesExploration/opening/opening-ko.html
+++ b/FourierSeriesExploration/opening/opening-ko.html
@@ -45,7 +45,7 @@
 $exampleText.textContent = '안녕 푸리에 급수!';
       </pre>
       <p>이것은 아주 재미있는 경험이 아닐 수 없습니다!</p>
-      <p>※ 코드 중에 // 으로 시작하는 내용은 주석으로 제외하고 입력해도 코드의 실행엔 영향이 없습니다.</p>
+      <p>※ 코드 중에 // 으로 시작하는 내용은 주석으로서, 제외하고 입력해도 코드의 실행엔 영향이 없습니다.</p>
       <p>아무튼 이제 모든 준비는 끝났습니다. 푸리에 급수를 탐구하러 떠나 봅시다.</p>
       <p>아참, 3장과 4장의 실습에서 할 재밌는 것을 위해서는 잉크스케이프라는 프로그램을 다운받아야 합니다. 링크는 <a href="https://inkscape.org/release/1.1.2/windows/">여기를 클릭</a>.</p>
     </div>
