--- a/FourierSeriesExploration/ending/ending-en.html
+++ b/FourierSeriesExploration/ending/ending-en.html
@@ -11,7 +11,7 @@
     </div>
     <hr>
     <div>
-      <p>※ This article is written by a newbie; There are a lot of errors.</p>
+      <p>※ This writing is written by a newbie; There are a lot of errors.</p>
       <p>※ I use Chrome browser; I'm not sure whether this website / codes work in other browsers.</p>
       <h2>Legend</h2>
       <ul>
@@ -42,7 +42,7 @@
       </div>
       <p>So, now I'm going to depart in order to understand 「Fourier transform」.</p>
       <p>It would be appreciated if you find errors and let me know: logicseeker@naver.com</p>
-      <p>Thank you for reading my long articles.</p>
+      <p>Thank you for reading my long writings.</p>
     </div>
   </body>
 </html>
