--- a/FourierSeriesExploration/opening/opening-en.html
+++ b/FourierSeriesExploration/opening/opening-en.html
@@ -11,7 +11,7 @@
     </div>
     <hr>
     <div>
-      <p>※ This article is written by a newbie; There are a lot of errors.</p>
+      <p>※ This writing is written by a newbie; There are a lot of errors.</p>
       <p>※ I use Chrome browser; I'm not sure whether this website / codes work in other browsers.</p>
       <h2>Legend</h2>
       <ul>
@@ -31,11 +31,11 @@
         <figcaption>Fourier series (picture source: <a href="https://www.youtube.com/watch?v=TQyEuJnQG2s&t=73s">Youtube link</a>)</figcaption>
       </figure>
       <p>I leave the result of studying Fourier series in the last few days in a form of exploration. There are a lot of videos about Fourier series and its visualization. It would be great if you search them. (Of course, I'm not good at English so I couldn't understand them much.)</p>
-      <p>Overall, The following articles deal with visualization through JavaScript. But, exceptionally, in chapter two uses Web Audio API in order to reproduce an approximated waveform. So you can hear it. (It will be great if you have an microphone and you are in an environment you can let your voice out!)</p>
+      <p>Overall, The following writings deal with visualization through JavaScript. But, exceptionally, in chapter two uses Web Audio API in order to reproduce an approximated waveform. So you can hear it. (It will be great if you have an microphone and you are in an environment you can let your voice out!)</p>
       <p>In chapter one introduces basic content of Fourier series and Fourier coefficients, so it will be a good thing to see them.</p>
-      <p>I think it requires no knowledge of JavaScript that reading this articles. (Perhaps...)</p>
-      <p>But, if you have some programming experience, it will be easy to read code. But what is important in these articles is an mathematical approach, not programming things.</p>
-      <p>But you need to type some code in the console window in chapter two in order to interact with the article, so let's practice a bit before here. (I was able to choose buttons to make the article able to interact with you, but it is more fun to type code)</p>
+      <p>I think it requires no knowledge of JavaScript that reading this writings. (Perhaps...)</p>
+      <p>But, if you have some programming experience, it will be easy to read code. But what is important in these writings is an mathematical approach, not programming things.</p>
+      <p>But you need to type some code in the console window in chapter two in order to interact with the writing, so let's practice a bit before here. (I was able to choose buttons to make the writing able to interact with you, but it is more fun to type code)</p>
       <p>First, you can open the console window by pressing <code>F12</code> in the keyboard.</p>
       <img src="../src/opening_console.png" style="border: 1px solid black">
       <p>Then a window like that will appear. Click the 'console' at the above menu. And, type the below to the console window.</p>
