--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2116,6 +2116,164 @@ function playSound() {
         <p>channelInterpretation이 "speakers" 라면, 특정한 채널 레이아웃에 대해 업믹싱과 다운믹싱이 정의됩니다.</p>
         <p>모노 (1채널), 스테레오 (2채널), 쿼드 (4채널), 5.1 (6채널) 이 반드시 지원되어야만 합니다. 다른 채널 레이아웃은 이 명세의 미래 버전에서 지원될 수도 있습니다.</p>
         <br>
+        <h2>4.2. 채널 순서</h2>
+        <p>채널 순서는 다음 표에 의해 정의된다. 개개의 다채널 포맷은 모든 중간 채널들을 지원하지 않을 수 있다. 구현은 반드시 아래에 정의된 순서로 제공된 채널들을 나타내야만 하며, 나타나지 않은 채널은 생략한다.</p>
+        <table>
+          <thead>
+            <tr>
+              <td>순서</td>
+              <td>라벨</td>
+              <td>모노</td>
+              <td>스테레오</td>
+              <td>쿼드</td>
+              <td>5.1</td>
+            </tr>
+            <tr>
+              <td>0</td>
+              <td>SPEAKER_FRONT_LEFT</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>SPEAKER_FRONT_RIGHT</td>
+              <td></td>
+              <td>1</td>
+              <td>1</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>SPEAKER_FRONT_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>SPEAKER_LOW_FREQUENCY</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>SPEAKER_BACK_LEFT</td>
+              <td></td>
+              <td></td>
+              <td>2</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>SPEAKER_BACK_RIGHT</td>
+              <td></td>
+              <td></td>
+              <td>3</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>SPEAKER_FRONT_LEFT_OF_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>SPEAKER_FRONT_RIGHT_OF_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>SPEAKER_BACK_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>SPEAKER_SIDE_LEFT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>SPEAKER_SIDE_RIGHT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>11</td>
+              <td>SPEAKER_TOP_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>12</td>
+              <td>SPEAKER_TOP_FRONT_LEFT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>13</td>
+              <td>SPEAKER_TOP_FRONT_CENTER	</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>14</td>
+              <td>SPEAKER_TOP_FRONT_RIGHT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>SPEAKER_TOP_BACK_LEFT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>16</td>
+              <td>SPEAKER_TOP_BACK_CENTER</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>17</td>
+              <td>SPEAKER_TOP_BACK_RIGHT</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+        </table>
+        <br>
       </div>
     </main>
   </body>
