--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2274,6 +2274,23 @@ function playSound() {
             </tr>
         </table>
         <br>
+        <h2>4.3. 입력과 출력 채널 카운트의 꼬리 시간의 구현</h2>
+        <p>AudioNode가 0이 아닌 꼬리 시간을 가지고, 입력 채널 카운트에 좌우되는 출력 채널 카운트를 가졌을 때, 입력 채널 카운트가 변화할 때 AudioNode의 꼬리 시간은 반드시 고려되어져야만 합니다.</p>
+        <p>입력 채널 카운트에 감소가 있을 때, 더 큰 채널 카운트와 함께 받아진 입력이 더 이상 출력에 영향을 주지 않을 때 출력 채널 카운트에서의 변화는 반드시 발생해야만 합니다.</p>
+        <p>입력 채널 카운트에서의 증가가 있을 때, 동작은 AudioNode 유형에 따라 다릅니다:</p>
+        <ul>
+          <li>DelayNode나 DynamicsCompressorNode에 대해서, 출력 채널의 수는 더 큰 채널 카운트와 함께 받아진 입력이 출력에 영향을 주기 시작했을 때 반드시 증가해야만 합니다.</li>
+          <li>꼬리 시간을 가진 다른 AudioNode에 대해서, 출력 채널의 수는 반드시 즉시 증가해야만 합니다.
+            <div class="note">
+              <p>참고: ConvolverNode에 대해서, 이것은 오직 임펄스 응답이 모노인 경우에만 적용됩니다. 그렇지 않으면, ConvolverNode는 자신의 입력 채널 카운트에 관계없이 항상 스테레오 신호를 출력합니다.</p>
+            </div>
+          </li>
+        </ul>
+        <br>
+        <div class="note">
+          <p>직감적으로, 이것은 프로세싱의 부분으로서 스테레오 정보를 잃지 않게 해 줍니다: 다른 채널 카운트의 다수의 입력 render quantum들이 출력 render quantum에 공헌할 때 출력 render quantum의 채널 카운트는 입력 render quantum들의 입력 채널 카운트의 상위 집합입니다.</p>
+        </div>
+        <br>
       </div>
     </main>
   </body>
