--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2406,6 +2406,9 @@ gain.channelInterpretation = "speakers";
         <p><strong>선형 펄스 부호 변조</strong>(linear pulse code modulation; linear PCM) 은 하나의 포맷인데, 이 포맷에서는 오디오 값들이 정기적인 구간에서 샘플링되며, 두 개의 연이은 값 사이의 양자화 레벨이 선형적으로 균일합니다.</p>
         <p>이 명세에서 신호 값들이 스크립트에 노출될 때는 언제든지, 그 값들은 선형 32비트 부동 소수점 펄스 부호 변조 포맷 (선형 32비트 부동 소수점 PCM) 이며, 종종 Float32Array 객체의 형태로 존재합니다.</p>
         <br>
+        <h2>5.2. 렌더링</h2>
+        <p>무슨 오디오 그래프에서든지 목적지 노드에서의 모든 오디오 신호의 범위는 명목상(공칭상) [1, 1]입니다. 이 범위 바깥, NaN값, 양의 무한, 음의 무한의 신호 값의 오디오 렌더링은 이 명세에 의해 정의되지 않습니다.</p>
+        <br>
       </div>
     </main>
   </body>
