--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2409,6 +2409,16 @@ gain.channelInterpretation = "speakers";
         <h2>5.2. 렌더링</h2>
         <p>무슨 오디오 그래프에서든지 목적지 노드에서의 모든 오디오 신호의 범위는 명목상(공칭상) [1, 1]입니다. 이 범위 바깥, NaN값, 양의 무한, 음의 무한의 신호 값의 오디오 렌더링은 이 명세에 의해 정의되지 않습니다.</p>
         <br>
+        <h1>6. 공간화/패닝</h1>
+        <h2>6.1. 배경</h2>
+        <p>현대 3D 게임에서의 일반적인 기능 요구는 3D 공간에서의 다수의 오디오 소스의 동적 공간화와 이동입니다. 예를 들자면 OpenAL이 이러한 기능을 가지고 있습니다.</p>
+        <p>PannerNode를 사용하여, 오디오 스트림은 AudioListener에 관해 공간화되거나 공간에서 위치가 지정될 수 있습니다. BaseAudioContext는 하나의 AudioListener를 가지고 있습니다. 패너와 리스너 둘 다 오른손 카르테시안 좌표계를 사용하여 3D 공간에서의 위치를 가집니다. 좌표계에서 사용되는 단위는 정의되지 않았고, 그럴 필요도 없는 것이 이 좌표들과 함께 계산되는 효과는 미터나 피트와 같은 특정한 단위에 독립적이거나 변함이 없기 때문입니다. PannerNode 객체 (소스 스트림을 나타냄) 는 소리가 어떤 방향을 비추고 있는지를 나타내는 방향 벡터를 가지고 있습니다. 추가적으로, PannerNode는 소리가 얼마나 방향성인지를 나타내는 sound cone을 가지고 있습니다. 예를 들어, 소리가 전방향이어서 방향에 관계없이 어디서든 들릴 수 있고, 또는 소리가 지향성이라 소리가 리스너를 바라볼 때에만 들릴 수 있습니다. AudioListener 객체 (사람의 귀를 나타냄) 은 앞과 위 벡터를 가지고 있고 이 벡터들은 사람이 바라보고 있는 방향을 나타냅니다.</p>
+        <p>아래의 도식은 공간화에서의 좌표계와 기본값을 보여줍니다. AudioListener와 PannerNode의 위치는 우리가 상황을 더 잘 파악할 수 있도록 기본 위치에서 이동되어 있습니다.</p>
+        <figure>
+          <img src="img/panner-coord.svg">
+          <figcaption><strong>도식 19</strong> AudioListener와 PannerNode 어트리뷰트가 보이는 좌표계를 나타내는 도식</figcaption>
+        </figure>
+        <p>렌더링 중에, PannerNode는 방위각(azimuth)과 고도(elevation)를 계산합니다. 이 값들은 구현에 의해 나부적으로 사용되어 공간화 효과를 렌더링합니다. 이 값들이 어떻게 쓰이는지에 대한 자세한 사항에 대해서는 Panning Algorithm 섹션을 참고하세요.</p>
       </div>
     </main>
   </body>
